# nodejs-built-in-modules

./: CHANGELOG.md  Cargo.toml  README.md  dprint.json  justfile  package.json  pnpm-lock.yaml  vite.config.ts
.github/: renovate.json
.github/workflows/: autofix.yml  ci.yml  update-builtins.yml  zizmor.yml
benches/: is_builtin.rs
src/: lib.rs
tasks/update_builtins/: Cargo.toml
tasks/update_builtins/src/: main.rs
tests/: main.rs
