[workspace]
members = [".", "tasks/update_builtins"]
resolver = "2"

[package]
name = "nodejs-built-in-modules"
version = "0.0.1"
authors = ["Boshen <boshenc@gmail.com>"]
categories = []
edition = "2024"
include = ["/src"]
keywords = ["nodejs"]
license = "MIT"
publish = true
readme = "README.md"
repository = "https://github.com/oxc-project/nodejs-built-in-modules"
description = "Node.js built-in modules"

[lib]
test = false
doctest = false

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "is_builtin"
harness = false
