[workspace]
members = [".", "tasks/update_builtins"]
resolver = "2"

[package]
name = "nodejs-built-in-modules"
version = "0.0.2"
authors = ["Boshen <boshenc@gmail.com>"]
categories = []
edition = "2024"
include = ["/src"]
keywords = ["nodejs"]
license = "MIT"
publish = true
readme = "README.md"
repository = "https://github.com/oxc-project/nodejs-built-in-modules"
description = "Node.js built-in modules"

[lib]
test = false
doctest = false

[dev-dependencies]
criterion2 = "3.0"

[[bench]]
name = "is_builtin"
harness = false
